fixed firefox scrollbar issue - 1703172, 1784853
git-svn-id: svn://svn.code.sf.net/p/oreports/code/trunk@38 35531a67-7d2f-0410-81a2-b8b02ed50f64

--- a/openreports/WebRoot/css/openreports.css
+++ b/openreports/WebRoot/css/openreports.css
@@ -1,5 +1,4 @@
-html {
-	overflow: -moz-scrollbars-vertical !important;
+html {	
 	text-align: center;
 }
 
